添加公共工具类及头尾模版

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "WEBPACK_ENV=dev webpack-dev-server --inline --port 8088",
     "dist": "WEBPACK_ENV=online webpack -p",
-    "dev-win" : "set WEBPACK_ENV=dev && webpack-dev-server --inline --port 8088",
-    "dis-win" : "set WEBPACK_ENV=online && webpack -p"
+    "dev-win": "set WEBPACK_ENV=dev && webpack-dev-server --inline --port 8088",
+    "dis-win": "set WEBPACK_ENV=online && webpack -p"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,7 @@
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "hogan": "^1.0.2"
+  }
 }
